--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="Every src attribute needs an assigned value, either a URL or relative path"/>
+    <img src="Every src attribute needs an assigned value, either a URL or relative path"
+    alt="The alt attribute should have text content.  This will show up if the image fails to load"
+    />
+    <img src="Every src attribute"
+    alt="The alt"
+    title="We here to help"
+    />
   </body>
 </html>
